--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Maxcoro",
   "short_name": "Maxcoro",
-  "start_url": "https://www.maxcoro.blogspot.com",
+  "start_url": "https://www.maxcoro.xyz/",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#C51162",
